style/style.css
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    overflow: visible;
    font-family: 'Roboto', sans-serif;
    scroll-behavior: smooth;
    user-select: none;
}

html {
    background-color: black;
}

body {
    animation: fadein 2s;
}

/* Background-Shadow */

#shadow {
    position: fixed;
    left:0;
    top:0;
    height: 100%;
    width: 100%;
    z-index: 1;
    pointer-events: none;
    background: url("../images/shadow.png") no-repeat center center fixed;
    -webkit-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -o-background-size: 100% 100%;
    background-size: 100% 100%;
}

.contentElem { /* element of content-div */
    position: relative;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    flex-direction: column;
}

.elemSection { /* section of element */
    margin-bottom: 30px;
    text-align: center;
    max-width: 80%;
}

.titleDiv { /* title of element */
    font-size: 60px;
    line-height: 60px;
    display: inline-block;
}

.elemLinks a {
    margin: 0 10px;
}

.linkButton {
    display: inline-block;
    text-decoration: none;
    background-color: rgb(0, 69, 115);
    height: 60px;
    line-height: 60px;
    font-size: 30px;
    vertical-align: middle;
    padding: 0 20px;
    border: 1px solid white;
    color: #bebebe;
    transition: color 0.3s, background-color 0.3s;
}

.linkButton img {
    position: relative;
    top: -3px;
    left: -5px;
    vertical-align: middle;
    width: 50px;
    height: 50px;
}

.linkButton:hover {
    background-color: rgb(0, 103, 172);
    cursor: pointer;
    color: white;
}

.descriptionDiv {
    padding: 10px;
    font-size: 20px;
}

.highlightSpan { /* highlighted part of description */
    font-weight: bold;
    color: #ff8d1f;
}

#welcomeDiv {
    background-color: rgb(0, 69, 115);
    transition: background-color 1s;
}

#welcomeLinks {
    animation: fadein 4s;
}

#welcomeDescription {
    animation: fadein 8s;
}

#arraySortDiv {
    background: url("../images/arraySortingPicture.png") no-repeat fixed center center;
    background-size: cover;
}

#arraySortDiv .linkButton {
    color: black;
    background-color: #ff6f00;
}

#arraySortDiv .reactButton {
    background-color: #0066c8;
}

#arraySortDiv .linkButton:hover {
    background-color: #ff9900;
}

#arraySortDiv .reactButton:hover {
    background-color: #007bee;
}

#arraySortDiv .descriptionDiv {
    background-color: rgba(0,0,0,0.2);
    box-shadow: 0 0 10px 10px rgba(0,0,0,0.2);
}

#mazeSolveDiv {
    background: url("../images/mazeSolvingPicture.png") no-repeat fixed center center;
    background-size: cover;
}

#mazeSolveDiv .linkButton {
    color: white;
    background-color: #0a4c01;
}

#mazeSolveDiv .linkButton:hover {
    background-color: #0b6b00;
}

#snakeDiv {
    background-color: #ff5900;
}



/* Scroll-Arrows */

.scroll {
    position: absolute;
    z-index: 2;
    width: 100%;
    height: 50px;
    text-align: center;
}

.scroll:hover {
    cursor: pointer;
}

.scroll img {
    opacity: 0.5;
    height: 50px;
    width: 50px;
    transition: opacity 0.4s;
}

.scroll:hover img {
    opacity: 1;
}

.scrollDown {
    bottom: 0;
}

.scrollUp {
    top: 0;
}

@keyframes fadein {
    from { opacity: 0}
    to   { opacity: 1}
}

/* mobile */

@media (pointer:none), (pointer:coarse) {
    #snakeDiv {
        display: none;
    }

    #scrollToSnake {
        display: none;
    }
}

